# BlueSnail

./: README.md  pyproject.toml
bluesnail/: __init__.py
bluesnail/agent/: __init__.py  agent.py  context.py  exceptions.py  llm.py  memory.py  scheduler.py  skill_loader.py  skills.py  tools.py  types.py
bluesnail/agent/providers/: __init__.py  openai_compatible.py
bluesnail/skills/: __init__.py
bluesnail/skills/get-weather/: SKILL.md
bluesnail/skills/get-weather/scripts/: handler.py
bluesnail/tools/: __init__.py  filesystem.py
bluesnail/web/: __init__.py  app.py  llm_config.py  server.py
bluesnail/web/static/: app.js  index.html  markdown.js  style.css
examples/: basic_demo.py  run_webui.py
tests/: test_agent.py  test_filesystem_tools.py  test_openai_provider.py  test_skills.py  test_web.py
