[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluesnail"
version = "0.1.0"
description = "A modular AI Agent framework for Python 3.10+"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "BlueSnail" }]
keywords = ["ai", "agent", "llm", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "httpx>=0.27"]

[project.scripts]
bluesnail-web = "bluesnail.web.server:main"

[tool.hatch.build.targets.wheel]
packages = ["bluesnail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
